Get columns to show from first file entry

Currently, we use the first entry in an archive to determine which
columns to show. If the first entry happens to be a directory, then all
relevant columns might not be shown.

Make sure we always check the first file entry for columns to
show.

BUG: 406135
FIXED-IN: 19.04.2
Differential Revision: D20683